# codebase-py

./: .gitmodules  pyproject.toml  readme.md
apps/auto-gui/: .gitignore  README.md  browser_automation.py  main.py  pyproject.toml
apps/wechaty_bot/: main.py  readme.md  utils.py  wechat.py
apps/wechaty_bot/wechaty_bot/: base.py  simulate_card_2.py  uni_parser_bot.py
docs/: dev.md  自动化 - editable 输入.md
docs/.obsidian/: workspace.json
